# crata

./: CHAT_HISTORY.md  PLAN_INICIAL.md  README.md  prueba.docx
backend/: .env.example  contracts.db  main.py  pyproject.toml
backend/app/api/v1/endpoints/: contract.py
backend/app/core/: config.py
backend/app/crud/: contract.py  history.py
backend/app/data/: alquiler.json  compraventa.json  laboral.json  nda.json  servicios.json
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: ai_models.py  contract.py
backend/app/services/: ai_pipelines.py  contract_service.py  groq_service.py
backend/tests/: conftest.py  test_pipelines.py  test_routes.py
examples/alquiler/: alquiler_01_basico_limpio.txt  alquiler_02_fianza_excesiva.txt  alquiler_03_sin_prorroga.txt  alquiler_04_prohibicion_obras_discapacidad.txt  alquiler_05_sin_renta_especificada.txt
examples/compraventa/: compraventa_01_basico_limpio.txt  compraventa_02_renuncia_vicios_ocultos.txt  compraventa_03_cargas_no_declaradas.txt  compraventa_04_arras_asimetricas.txt  compraventa_05_sin_precio_definido.txt
examples/laboral/: laboral_01_basico_limpio.txt  laboral_02_periodo_prueba_excesivo.txt  laboral_03_no_competencia_sin_compensacion.txt  laboral_04_jornada_excesiva.txt  laboral_05_temporal_sin_causa.txt
examples/nda/: nda_01_basico_limpio.txt  nda_02_confidencialidad_indefinida.txt  nda_03_sin_excepciones_judiciales.txt  nda_04_sin_clausula_datos_personales.txt  (+1 more)
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json
frontend/src/: App.tsx
(+25 files in other folders)
